# offie

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
.cursor/rules/: planning-docs-tests.mdc  python-pytest.mdc  python-standards.mdc  python-testing.mdc
.github/workflows/: tests.yml
docs/: README.md  contributing-commands.md  getting-started.md
docs/commands/: ai-agent.md  control-flow.md  output.md  variables.md
offie/: __init__.py  cli.py
offie/commands/: __init__.py  ai.py  control_flow.py  output.py  registry.py  utils.py  variables.py
offie/core/: __init__.py  context.py  executor.py  expressions.py  models.py  parser.py  validator.py
offie/handlers/: __init__.py
offie/handlers/ai/: __init__.py  base.py  cursor.py  ollama.py
tests/: __init__.py  conftest.py  test_ai.py  test_control_flow.py  test_end_to_end.py  test_executor.py  test_output.py  test_parser.py  test_validator.py
workflows/: basic_workflow.yml  example.yml
workflows/demos/ai_agent/: cursor.yml  ollama.yml
