 [build-system]
 requires = ["setuptools>=61", "wheel"]
 build-backend = "setuptools.build_meta"

 [project]
 name = "offie"
 version = "0.1.0"
 description = "YAML-based workflow runner"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "PyYAML>=6.0",
     "simpleeval>=0.9.0",
 ]

 [project.scripts]
 offie = "offie.cli:main"

 [tool.setuptools]
 packages = ["offie"]

